--- a/src/grid.html
+++ b/src/grid.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive grid with NEAT</title>
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="assets/css/app.css">
   </head>
   <body>
     <div class="container grid-example">
